Gramatica.txt

     program -> bloque

     bloque -> TkOBlock t TkCBlock

     t -> casoInstrucciones
        | declaracionVariables casoInstrucciones

     casoInstrucciones -> listaInstrucciones
     		     | casoInstrucciones TkSemicolon listaInstrucciones

     listaInstrucciones -> instruccionIf
                        | instruccionFor
     		        | instruccionDo
 	                | asignacionVariables
                        | readVariables
                        | printExpression
                        | printlnExpression

    instruccionIf -> TkIf condicion TkArrow bloque variasGuardias TkFi

    		  | TkIf condicion TkArrow printExpression variasGuardias TkFi

    instruccionFor -> TkFor TkId TkIn expression TkTo expression TkArrow bloque TkRof

    instruccionDo -> TkDo condicion TkArrow bloque TkOd

    variasGuardias -> TkGuard condicion TkArrow bloque variasGuardias
                    | TkGuard condicion TkArrow printExpression variasGuardias
                    | empty

    condicion -> expression
               | expression relation expression
               | TkNot expression
               | condicion operadorBool expression
               | condicion operadorBool expression relation expression

    operadorBool -> TkAnd
                 | TkOr
                 | TkNot

    relation -> TkLess
              | TkGreater
              | TkLeq
              | TkGeq
              |TkEqual
              | TkNEqual
   
    declaracionVariables -> TkDeclare declaracionSemiColon

    declaracionSemiColon -> declaracionSemiColon TkSemicolon declaracion
                          | declaracion

    declaracion -> TkId TkComma declaracion TkComma tipo
                | TkId TkTwoPoints tipo
                | TkId TkComma declaracion

    asignacionVariables -> asignacion

    asignacion -> TkId TkAsig listaExpression 
                | TkId TkAsig asignacionArreglos

    listaExpression -> listaExpression TkComma expression
                     | -> expression

    asignacionArreglos -> TkId listaIndices posicionArreglo

    listaIndices -> listaIndices TkOpenPar expression TkTwoPoints expression TkClosePar
                  | TkOpenPar expression TkTwoPoints expression TkClosePar
    
    posicionArreglo -> TkOBracket TkNum TkCBracket
                     | -> <empty>               
           

    readVariables -> read

    read -> TkRead TkId

    printExpression -> print

    print -> TkPrint concatPrint

    concatPrint -> concatPrint TkConcat expression
                 | expression

    printlnExpression -> println

    println -> TkPrintln expression
    tipo -> TkBool
          | TkInt
          | TkArray TkOBracket expression TkSoForth expression TkCBracket
    empty -> <empty>
   
    expression -> term
               | addingOperator term
               | expression addingOperator term
               | embed
  
    addingOperator -> TkPlus
                  | TkMinus

    term -> factor
         | term multiplyingOperator factor
  
    multiplyingOperator -> TkMult
                        | TkDiv
  
    factor -> Id
    	   | TkNum
    	   | TkOpenPar expression TkClosePar
    	   | TkMinus TkNum
    	   | TkString
    	   | TkTrue
    	   | TkFalse
         | TkId TkOBracket expression TkCBracket
 
    Id -> TkId
 
    embed -> TkMax TkOpenPar TkId TkClosePar
           | TkMin TkOpenPar TkId TkClosePar
           | TkAtoi TkOpenPar TkId TkClosePar
